[gd_scene load_steps=4 format=3 uid="uid://dscinfguvb265"]

[ext_resource type="Script" path="res://scenes/additional/library_additional/create_table.gd" id="1_8afrb"]
[ext_resource type="PackedScene" uid="uid://bbn5f1bvsd8uj" path="res://scenes/additional/library_additional/create_table/macro_field.tscn" id="2_6edm6"]
[ext_resource type="PackedScene" uid="uid://dpeojidf8mtwo" path="res://scenes/additional/library_additional/create_table/property_field.tscn" id="2_h68gc"]

[node name="create_table" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8afrb")

[node name="margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="vbox" type="VBoxContainer" parent="margin"]
layout_mode = 2

[node name="header" type="Label" parent="margin/vbox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Creating new table"

[node name="HSeparator" type="HSeparator" parent="margin/vbox"]
layout_mode = 2

[node name="scroll" type="ScrollContainer" parent="margin/vbox"]
layout_mode = 2
size_flags_vertical = 3
scroll_vertical = 100
horizontal_scroll_mode = 0

[node name="vbox" type="VBoxContainer" parent="margin/vbox/scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="settings" type="VBoxContainer" parent="margin/vbox/scroll/vbox"]
layout_mode = 2

[node name="label" type="Label" parent="margin/vbox/scroll/vbox/settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Settings"

[node name="table_name" type="HBoxContainer" parent="margin/vbox/scroll/vbox/settings"]
layout_mode = 2

[node name="label" type="Label" parent="margin/vbox/scroll/vbox/settings/table_name"]
layout_mode = 2
text = "Table name:"

[node name="LineEdit" type="LineEdit" parent="margin/vbox/scroll/vbox/settings/table_name"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Weapon, Armor, Potions etc."

[node name="table_codename" type="HBoxContainer" parent="margin/vbox/scroll/vbox/settings"]
layout_mode = 2

[node name="label" type="Label" parent="margin/vbox/scroll/vbox/settings/table_codename"]
layout_mode = 2
text = "Table codename:"

[node name="LineEdit" type="LineEdit" parent="margin/vbox/scroll/vbox/settings/table_codename"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "weapon, aromr, potion etc."

[node name="table_icon" type="HBoxContainer" parent="margin/vbox/scroll/vbox/settings"]
layout_mode = 2

[node name="label" type="Label" parent="margin/vbox/scroll/vbox/settings/table_icon"]
layout_mode = 2
text = "Table icon:"

[node name="OptionButton" type="OptionButton" parent="margin/vbox/scroll/vbox/settings/table_icon"]
layout_mode = 2
item_count = 2
popup/item_0/text = "Book"
popup/item_0/id = 0
popup/item_1/text = "Sword"
popup/item_1/id = 1

[node name="search" type="HBoxContainer" parent="margin/vbox/scroll/vbox/settings"]
layout_mode = 2

[node name="label" type="Label" parent="margin/vbox/scroll/vbox/settings/search"]
layout_mode = 2
text = "Search by:"

[node name="LineEdit" type="LineEdit" parent="margin/vbox/scroll/vbox/settings/search"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Field writed in format: name; codename; some-field"

[node name="HSeparator" type="HSeparator" parent="margin/vbox/scroll/vbox"]
layout_mode = 2

[node name="short_view" type="VBoxContainer" parent="margin/vbox/scroll/vbox"]
layout_mode = 2

[node name="label" type="Label" parent="margin/vbox/scroll/vbox/short_view"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Short view"

[node name="elements" type="LineEdit" parent="margin/vbox/scroll/vbox/short_view"]
layout_mode = 2
placeholder_text = "Write codenames of fileds what are you want to show in short view. Example: [name; level; description]"

[node name="HSeparator2" type="HSeparator" parent="margin/vbox/scroll/vbox"]
layout_mode = 2

[node name="properties" type="VBoxContainer" parent="margin/vbox/scroll/vbox"]
layout_mode = 2

[node name="label" type="Label" parent="margin/vbox/scroll/vbox/properties"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Properties"

[node name="elements" type="VBoxContainer" parent="margin/vbox/scroll/vbox/properties"]
layout_mode = 2

[node name="vbox" type="VBoxContainer" parent="margin/vbox/scroll/vbox/properties/elements"]
layout_mode = 2

[node name="property" parent="margin/vbox/scroll/vbox/properties/elements/vbox" instance=ExtResource("2_h68gc")]
layout_mode = 2

[node name="add" type="Button" parent="margin/vbox/scroll/vbox/properties/elements"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 23
text = "+"

[node name="HSeparator3" type="HSeparator" parent="margin/vbox/scroll/vbox"]
layout_mode = 2

[node name="macros" type="VBoxContainer" parent="margin/vbox/scroll/vbox"]
layout_mode = 2

[node name="label" type="Label" parent="margin/vbox/scroll/vbox/macros"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Macros"

[node name="elements" type="VBoxContainer" parent="margin/vbox/scroll/vbox/macros"]
layout_mode = 2

[node name="vbox" type="VBoxContainer" parent="margin/vbox/scroll/vbox/macros/elements"]
layout_mode = 2

[node name="macro_field" parent="margin/vbox/scroll/vbox/macros/elements/vbox" instance=ExtResource("2_6edm6")]
layout_mode = 2

[node name="add" type="Button" parent="margin/vbox/scroll/vbox/macros/elements"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 23
text = "+"

[node name="HSeparator4" type="HSeparator" parent="margin/vbox/scroll/vbox"]
layout_mode = 2

[node name="main_view" type="VBoxContainer" parent="margin/vbox/scroll/vbox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="label" type="Label" parent="margin/vbox/scroll/vbox/main_view"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Main view"

[node name="vbox" type="VBoxContainer" parent="margin/vbox/scroll/vbox/main_view"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="final_actions" type="HBoxContainer" parent="margin/vbox/scroll/vbox"]
layout_mode = 2

[node name="save_and_upload" type="Button" parent="margin/vbox/scroll/vbox/final_actions"]
layout_mode = 2
text = "Save and upload"

[node name="Button" type="Button" parent="margin/vbox/scroll/vbox/final_actions"]
layout_mode = 2
text = "Compress and print"

[node name="field_type_selector" type="PopupMenu" parent="."]
title = "Select field"
initial_position = 2
size = Vector2i(147, 386)
item_count = 14
item_0/text = "Field types"
item_0/id = 8
item_0/disabled = true
item_0/separator = true
item_1/text = "String"
item_1/id = 0
item_2/text = "Paragraph"
item_2/id = 1
item_3/text = "Number"
item_3/id = 2
item_4/text = "Bool"
item_4/id = 3
item_5/text = "List"
item_5/id = 4
item_6/text = "Image"
item_6/id = 6
item_7/text = "Gelery"
item_7/id = 7
item_8/text = "Macro"
item_8/id = 5
item_9/text = "Structure types"
item_9/id = 9
item_9/disabled = true
item_9/separator = true
item_10/text = "Block"
item_10/id = 10
item_11/text = "Tabs"
item_11/id = 11
item_12/text = ""
item_12/id = 12
item_13/text = "Cancel"
item_13/id = 13

[node name="field_setup" type="PopupPanel" parent="."]
title = "String field settings"
initial_position = 1
size = Vector2i(308, 100)
unresizable = false
borderless = false
always_on_top = true
extend_to_title = true
content_scale_mode = 1
content_scale_aspect = 4

[node name="tab_setup" type="PopupPanel" parent="."]
title = "Tab setup"
initial_position = 1
unresizable = false
borderless = false
always_on_top = true
extend_to_title = true
content_scale_mode = 1
content_scale_aspect = 4

[node name="vbox" type="VBoxContainer" parent="tab_setup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 130.0
offset_bottom = 96.0

[node name="vbox" type="VBoxContainer" parent="tab_setup/vbox"]
layout_mode = 2

[node name="create_tab" type="Button" parent="tab_setup/vbox"]
layout_mode = 2
text = "Create new tab"

[node name="submit" type="Button" parent="tab_setup/vbox"]
layout_mode = 2
text = "Submit"

[connection signal="pressed" from="margin/vbox/scroll/vbox/properties/elements/add" to="." method="_on_add_property_pressed"]
[connection signal="pressed" from="margin/vbox/scroll/vbox/macros/elements/add" to="." method="_on_add_macro_pressed"]
[connection signal="pressed" from="margin/vbox/scroll/vbox/final_actions/save_and_upload" to="." method="_on_save_and_upload_pressed"]
[connection signal="pressed" from="margin/vbox/scroll/vbox/final_actions/Button" to="." method="_on_compress_and_print_pressed"]
[connection signal="index_pressed" from="field_type_selector" to="." method="_on_field_type_selected"]
[connection signal="pressed" from="tab_setup/vbox/create_tab" to="." method="_on_create_field_in_tabs_pressed"]
[connection signal="pressed" from="tab_setup/vbox/submit" to="." method="_on_tab_setup_submit_pressed"]
